# tutorial-dqrobotics-with-coppeliasim

./: .buildinfo  .readthedocs.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  test_json.py
.doctrees/: environment.pickle  index.doctree
.doctrees/advanced/: index.doctree  topic1.doctree  topic2.doctree
.doctrees/get_started/: index.doctree
.github/workflows/: documentation.yaml
_downloads/15c5cecf2ee927a297866ff170c19509/: template_synchronous.cpp
_downloads/33229965d0da1f4eac4afb7f22447950/: template_synchronous.py
_downloads/38a82abfb3ba01aff5963026097b365f/: free_fall_test.py
_downloads/7a2478c7ad6a8002f5e59cb9f533e47d/: template.cpp
_downloads/81b45e977efcf236dff1da9a53bf2084/: communication_test.py
_sources/: index.rst
_sources/advanced/: index.rst  topic2.rst
_static/: mathjax_config.html  pygments.css
advanced/: index.html  topic1.html  topic2.html
docs/: conf.py  index.rst  requirements.txt
docs/_ext/: mybashlexer.py
docs/_static/: custom.css
docs/_static/codes/get_started/coppeliasim_basics/communication/: CMakeLists.txt  communication_test.cpp  communication_test.m  communication_test.py  free_fall_test.cpp  free_fall_test.m  template.cpp  template.m  template.py  template_synchronous.cpp  template_synchronous.m  template_synchronous.py
docs/advanced/: topic1.rst  topic2.rst
docs/get_started/: index.rst
docs/installation/: index.rst  topic1.rst
docs/preamble/: dqrobotics.rst  index.rst  topic2.rst
docs/source/: about.rst  api.rst  conf.py  index.rst  (+3 more)
get_started/: index.html
(+102 files in other folders)
